# django-admin-extra

./: .gitignore  LICENSE.txt  README.rst  setup.cfg
djmoney_extra/: graphene.py  tables.py
djmoney_extra/tests/: settings.py
djmoney_extra/tests/testapp/: models.py
djmoney_extra/tests/testapp/migrations/: 0001_initial.py
djmoney_extra/tests/testapp/tests/: test_graphene.py  test_tables.py
