[metadata]
name = django-money-extra
version = 0.1
author = Anthony Monthe
author-email = anthony.monthe@gmail.com
url = attr: https://github.com/django-money/django-money-extra
project_urls =
summary = Compilation of utils helping Django Money integration with other packages.
description-file = file: README.rst
description-content-type = text/x-rst; charset=UTF-8

requires-dist =
    setuptools

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules

keywords = money, currency, django


[options]
zip_safe = False
include_package_data = True
package_dir=
packages=find:
    
install_requires =

# test_suite = fpb.tests.get_suite
[coverage:report]
show_missing = true
exclude_lines =
    noqa
    NotImplemented
